--- a/src/datascience/FrmConexao.form
+++ b/src/datascience/FrmConexao.form
@@ -4,6 +4,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Gest&#xe3;o de Conex&#xf5;es"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -93,7 +94,7 @@
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="cbxObjetivo" min="-2" pref="234" max="-2" attributes="0"/>
+                          <Component id="cbxObjetivo" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -112,7 +113,7 @@
                           <Component id="cbxObjetivo" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <Component id="txtNome" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -232,10 +233,12 @@
         <Component class="javax.swing.JComboBox" name="cbxSGDB">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="ORACLE"/>
+              <StringArray count="5">
+                <StringItem index="0" value="Oracle"/>
                 <StringItem index="1" value="MySQL"/>
                 <StringItem index="2" value="MS SQL Server"/>
+                <StringItem index="3" value="Postgre SQL"/>
+                <StringItem index="4" value="Mongo DB (Previsto)"/>
               </StringArray>
             </Property>
           </Properties>
@@ -258,10 +261,12 @@
         <Component class="javax.swing.JComboBox" name="cbxObjetivo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
+              <StringArray count="5">
                 <StringItem index="0" value="Origem dos dados"/>
-                <StringItem index="1" value="StagingArea"/>
-                <StringItem index="2" value="DataMart"/>
+                <StringItem index="1" value="Staging Area"/>
+                <StringItem index="2" value="Data Mart"/>
+                <StringItem index="3" value="Data Lake"/>
+                <StringItem index="4" value="Data Warehouse"/>
               </StringArray>
             </Property>
           </Properties>
